--- a/R_pkg/DESCRIPTION
+++ b/R_pkg/DESCRIPTION
@@ -8,7 +8,7 @@ Maintainer: Dylan Beaudette <dylan.beaudette@ca.usda.gov>
 Depends: R (>= 3.4.1)
 License: GPL (>= 3)
 Encoding: UTF-8
-LazyData: true
+LazyLoad: yes
 Repository: CRAN
 URL: https://github.com/ncss-tech/SoilTaxonomy
 BugReports: https://github.com/ncss-tech/SoilTaxonomyissues
