--- a/R_pkg/NAMESPACE
+++ b/R_pkg/NAMESPACE
@@ -9,6 +9,7 @@ export(isValidST)
 import(methods)
 importFrom(purrr,map)
 importFrom(purrr,map2_chr)
+importFrom(purrr,map_if)
 importFrom(purrr,map_int)
 importFrom(purrr,pluck)
 importFrom(stringi,stri_locate_last_regex)
