attempting to fix some bugs related to corner cases

--- a/R_pkg/NAMESPACE
+++ b/R_pkg/NAMESPACE
@@ -5,6 +5,8 @@ export(OrderFormativeElements)
 export(SubGroupFormativeElements)
 export(SubOrderFormativeElements)
 export(explainST)
+export(extractGreatGroup)
+export(extractSuborder)
 export(isValidST)
 import(methods)
 importFrom(purrr,map)
