--- a/R_pkg/NAMESPACE
+++ b/R_pkg/NAMESPACE
@@ -6,12 +6,12 @@ export(SubGroupFormativeElements)
 export(SubOrderFormativeElements)
 export(explainST)
 export(isValidST)
-import(methods)
 importFrom(purrr,map)
 importFrom(purrr,map2_chr)
 importFrom(purrr,map_if)
 importFrom(purrr,map_int)
 importFrom(purrr,pluck)
+importFrom(stats,na.omit)
 importFrom(stringi,stri_locate_last_regex)
 importFrom(stringi,stri_match_last_regex)
 importFrom(stringi,stri_replace_last_fixed)
