--- a/R_pkg/NAMESPACE
+++ b/R_pkg/NAMESPACE
@@ -8,6 +8,7 @@ export(decompose_taxon_code)
 export(explainST)
 export(isValidST)
 export(preceding_taxon_codes)
+export(relative_taxon_code_position)
 export(taxon_code_to_taxon)
 export(taxon_to_taxon_code)
 importFrom(purrr,map)
