--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,4 @@ BugReports: https://github.com/ncss-tech/SoilTaxonomy/issues
 Imports: stringr
 Suggests: testthat
 RoxygenNote: 7.1.1
+Roxygen: list(markdown = TRUE)
