--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(SubGroupFormativeElements)
 export(SubOrderFormativeElements)
 export(decompose_taxon_code)
 export(explainST)
+export(getParentTaxa)
 export(getTaxonAtLevel)
 export(isValidST)
 export(preceding_taxon_codes)
