explainST: Test HTML output

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,3 +15,4 @@ export(relative_taxon_code_position)
 export(taxon_code_to_taxon)
 export(taxon_to_taxon_code)
 importFrom(stringr,str_locate_all)
+importFrom(utils,browseURL)
