--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: SoilTaxonomy
 Title: United States Soil Taxonomy
-Description: Data dictionaries, formative element lists, and functions related to the maintenance, development and application of U.S. Soil Taxonomy.
+Description: Taxonomic dictionaries, formative element lists, and functions related to the maintenance, development and application of U.S. Soil Taxonomy.
 Version: 0.1.0.1000
 Authors@R: c(person(given="Dylan", family="Beaudette", role = c("aut"), email = "dylan.beaudette@usda.gov"), person(given="Andrew", family="Brown", email="andrew.g.brown@usda.gov", role = c("aut", "cre")))
 Maintainer: Andrew Brown <andrew.g.brown@usda.gov>
@@ -12,8 +12,6 @@ Repository: CRAN
 URL: https://github.com/ncss-tech/SoilTaxonomy
 BugReports: https://github.com/ncss-tech/SoilTaxonomy/issues
 Imports: stringr
-Suggests: 
-    testthat,
-    covr
+Suggests: testthat, covr
 RoxygenNote: 7.1.1
 Roxygen: list(markdown = TRUE)
