--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,11 @@ export(explainST)
 export(getParentTaxa)
 export(getTaxonAtLevel)
 export(isValidST)
+export(level_to_taxon)
 export(preceding_taxon_codes)
 export(relative_taxon_code_position)
 export(taxon_code_to_taxon)
+export(taxon_to_level)
 export(taxon_to_taxon_code)
 importFrom(stringr,str_locate_all)
 importFrom(utils,browseURL)
