Add family class extraction; support family inputs to getTaxonAtLevel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,10 +11,12 @@ export(getParentTaxa)
 export(getTaxonAtLevel)
 export(isValidST)
 export(level_to_taxon)
+export(parse_family)
 export(preceding_taxon_codes)
 export(relative_taxon_code_position)
 export(taxon_code_to_taxon)
 export(taxon_to_level)
 export(taxon_to_taxon_code)
+importFrom(stringr,str_locate)
 importFrom(stringr,str_locate_all)
 importFrom(utils,browseURL)
