Add get_ST_features / ST_features dataset  (#21)
* Add get_ST_features / ST_features dataset

* Incorporate Ch2 definitions into features dataset RE: https://github.com/ncss-tech/SoilKnowledgeBase/pull/21

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(decompose_taxon_code)
 export(explainST)
 export(getParentTaxa)
 export(getTaxonAtLevel)
+export(get_ST_features)
 export(isValidST)
 export(level_to_taxon)
 export(parse_family)
