--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(SubGroupFormativeElements)
 export(SubOrderFormativeElements)
 export(decompose_taxon_code)
 export(explainST)
+export(getLastChildTaxon)
 export(getParentTaxa)
 export(getTaxonAtLevel)
 export(get_ST_features)
