Add code_to_level and getChildTaxa

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,10 @@ export(GreatGroupFormativeElements)
 export(OrderFormativeElements)
 export(SubGroupFormativeElements)
 export(SubOrderFormativeElements)
+export(code_to_level)
 export(decompose_taxon_code)
 export(explainST)
+export(getChildTaxa)
 export(getLastChildTaxon)
 export(getParentTaxa)
 export(getTaxonAtLevel)
