Extend `parse_family()`, add soilDB to suggests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,8 @@ Suggests:
     covr,
     knitr,
     rmarkdown,
-    markdown
+    markdown,
+    soilDB
 RoxygenNote: 7.2.0
 Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
