--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(relative_taxon_code_position)
 export(taxon_code_to_taxon)
 export(taxon_to_level)
 export(taxon_to_taxon_code)
+import(data.table)
 importFrom(stringr,str_locate)
 importFrom(stringr,str_locate_all)
 importFrom(utils,browseURL)
