parse_family: `column_metadata` `FALSE` by default  - gentler introduction of soilDB dep

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,3 +25,4 @@ import(data.table)
 importFrom(stringr,str_locate)
 importFrom(stringr,str_locate_all)
 importFrom(utils,browseURL)
+importFrom(utils,packageVersion)
