Extensions to `parse_family()` (#36)
* Revert "(temporarily) roll back changes to parseFamily"

This reverts commit f8b306fdc8a145bdc9764158dc4141dba8ed3fbe.

* Revert "parse_family: `column_metadata` `FALSE` by default"

This reverts commit 63d30a1e39ed151d9a35ba6ee08cb9d8ab72f7ec.

* Safe vignette

* Add data.table back to Imports

* NAMESPACE/examples

* Cleanup

* Relax soilDB function def requirement for backward compatibility

* Add reverted R-CMD-check for devel aqp/soilDB back in

* Fix R<4.0 errors?

* typo

* Docs

* Fix logic + docs

* run example

* dont skip

* Missed one?

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,13 +13,14 @@ LazyLoad: yes
 Repository: CRAN
 URL: https://github.com/ncss-tech/SoilTaxonomy, https://ncss-tech.github.io/SoilTaxonomy
 BugReports: https://github.com/ncss-tech/SoilTaxonomy/issues
-Imports: stringr
+Imports: stringr, data.table
 Suggests: 
     testthat,
     covr,
     knitr,
     rmarkdown,
-    markdown
+    markdown,
+    soilDB
 RoxygenNote: 7.2.0
 Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
