parse_family: Used fixed lookup of subgroups within families  - ~2x speedup

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(taxon_code_to_taxon)
 export(taxon_to_level)
 export(taxon_to_taxon_code)
 import(data.table)
+importFrom(stringr,fixed)
 importFrom(stringr,str_locate)
 importFrom(stringr,str_locate_all)
 importFrom(utils,browseURL)
