Add `get_ST_family_classes`  - generic method for data set filtering, update vignette and get_ST_features

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(getChildTaxa)
 export(getLastChildTaxon)
 export(getParentTaxa)
 export(getTaxonAtLevel)
+export(get_ST_family_classes)
 export(get_ST_features)
 export(isValidST)
 export(level_to_taxon)
@@ -26,3 +27,4 @@ importFrom(stringr,fixed)
 importFrom(stringr,str_locate)
 importFrom(stringr,str_locate_all)
 importFrom(utils,browseURL)
+importFrom(utils,type.convert)
