--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,8 @@ export(taxon_code_to_taxon)
 export(taxon_to_level)
 export(taxon_to_taxon_code)
 import(data.table)
+importFrom(stats,na.omit)
+importFrom(stats,setNames)
 importFrom(stringr,fixed)
 importFrom(stringr,str_locate)
 importFrom(stringr,str_locate_all)
