--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(get_ST_family_classes)
 export(get_ST_features)
 export(isValidST)
 export(level_to_taxon)
+export(newick_string)
 export(parse_family)
 export(preceding_taxon_codes)
 export(relative_taxon_code_position)
