--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(GreatGroupFormativeElements)
 export(OrderFormativeElements)
 export(SubGroupFormativeElements)
 export(SubOrderFormativeElements)
+export(child_level)
 export(code_to_level)
 export(decompose_taxon_code)
 export(explainST)
@@ -17,6 +18,7 @@ export(get_ST_features)
 export(isValidST)
 export(level_to_taxon)
 export(newick_string)
+export(parent_level)
 export(parse_family)
 export(preceding_taxon_codes)
 export(relative_taxon_code_position)
