--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(getParentTaxa)
 export(getTaxonAtLevel)
 export(get_ST_family_classes)
 export(get_ST_features)
+export(get_ST_formative_elements)
 export(isValidST)
 export(level_to_taxon)
 export(newick_string)
