Add `extractSMR()`  - for #34

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(child_level)
 export(code_to_level)
 export(decompose_taxon_code)
 export(explainST)
+export(extractSMR)
 export(getChildTaxa)
 export(getLastChildTaxon)
 export(getParentTaxa)
