--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(GreatGroupFormativeElements)
 export(OrderFormativeElements)
 export(SoilMoistureRegimeLevels)
 export(SoilTaxonomyLevels)
+export(SoilTemperatureRegimeLevels)
 export(SubGroupFormativeElements)
 export(SubOrderFormativeElements)
 export(child_level)
