--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(get_ST_family_classes)
 export(get_ST_features)
 export(get_ST_formative_elements)
 export(isValidST)
+export(level_hierarchy)
 export(level_to_taxon)
 export(newick_string)
 export(parent_level)
