Add caching of taxon code tables in `SoilTaxonomy.env` for much faster lookups  - also formative elements  - calculate lowercase taxon name for code LUT in cache

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(FormativeElements)
 export(GreatGroupFormativeElements)
 export(OrderFormativeElements)
 export(SoilMoistureRegimeLevels)
+export(SoilTaxonomy.env)
 export(SoilTaxonomyLevels)
 export(SoilTemperatureRegimeLevels)
 export(SubGroupFormativeElements)
