--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(parent_level)
 export(parse_family)
 export(preceding_taxon_codes)
 export(relative_taxon_code_position)
+export(taxonTree)
 export(taxon_code_to_taxon)
 export(taxon_to_level)
 export(taxon_to_taxon_code)
