--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(taxon_code_to_taxon)
 export(taxon_to_level)
 export(taxon_to_taxon_code)
 import(data.table)
+importFrom(stats,complete.cases)
 importFrom(stats,na.omit)
 importFrom(stats,setNames)
 importFrom(stringr,fixed)
