--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,4 +42,5 @@ importFrom(stringr,fixed)
 importFrom(stringr,str_locate)
 importFrom(stringr,str_locate_all)
 importFrom(utils,browseURL)
+importFrom(utils,tail)
 importFrom(utils,type.convert)
