--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(getChildTaxa)
 export(getLastChildTaxon)
 export(getParentTaxa)
 export(getTaxonAtLevel)
+export(getTaxonCriteria)
 export(get_ST_family_classes)
 export(get_ST_features)
 export(get_ST_formative_elements)
