--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(getLastChildTaxon)
 export(getParentTaxa)
 export(getTaxonAtLevel)
 export(getTaxonCriteria)
+export(getTaxonSMR)
 export(get_ST_family_classes)
 export(get_ST_features)
 export(get_ST_formative_elements)
