--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: A System of Soil Classification for Making and Interpreting Soil Surveys
 Description: Taxonomic dictionaries, formative element lists, and functions related to the maintenance, development and application of U.S. Soil Taxonomy. 
    Data and functionality are based on official U.S. Department of Agriculture sources including the latest edition of the Keys to Soil Taxonomy. Descriptions and metadata are obtained from the National Soil Information System or Soil Survey Geographic databases. Other sources are referenced in the data documentation. 
    Provides tools for understanding and interacting with concepts in the U.S. Soil Taxonomic System. Most of the current utilities are for working with taxonomic concepts at the "higher" taxonomic levels: Order, Suborder, Great Group, and Subgroup.
-Version: 0.2.7
+Version: 0.2.8
 Authors@R: c(person(given="Andrew", family="Brown", email="andrew.g.brown@usda.gov", role = c("aut", "cre")), person(given="Dylan", family="Beaudette", role = c("aut"), email = "dylan.beaudette@usda.gov"))
 Maintainer: Andrew Brown <andrew.g.brown@usda.gov>
 Depends: R (>= 3.5)
@@ -11,7 +11,7 @@ License: GPL (>= 3)
 Encoding: UTF-8
 LazyLoad: yes
 Repository: CRAN
-URL: https://github.com/ncss-tech/SoilTaxonomy, https://ncss-tech.github.io/SoilTaxonomy/, http://ncss-tech.github.io/SoilTaxonomy/
+URL: https://github.com/ncss-tech/SoilTaxonomy, https://ncss-tech.github.io/SoilTaxonomy/
 BugReports: https://github.com/ncss-tech/SoilTaxonomy/issues
 Imports: stats, utils, stringr, data.table
 Suggests: 
